--- a/website code/mcdegreestylesheet.css
+++ b/website code/mcdegreestylesheet.css
@@ -112,10 +112,29 @@ div > div {
   .row {
     align-content: center;
     margin-top: 30px;
+    margin-left: 10px;
+    border-style: none;
   }
 
   .title{
     font-size: 50;
-    font-family: 'Times New Roman';
+    font-family: 'Garamond';
     align-items: center;
+  }
+
+  .button {
+    background-color:#ffffff;
+    border: 2px solid #ff7575;
+    color: #ff7575;
+    padding: 3px 5px;
+    border-radius: 5px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    font-family: 'Garamond';
+  }
+  .button:hover {
+    background-color:#ff7575;
+    color: #ffffff; 
+    border: 2px solid #ff7575;
   }
