removed the faculty and program dropdowns, added a search bar

--- a/website code/mcdegreestylesheet.css
+++ b/website code/mcdegreestylesheet.css
@@ -138,3 +138,8 @@ div > div {
     color: #ffffff; 
     border: 2px solid #ff7575;
   }
+
+  /* Add a black background color to the top navigation bar */
+.topnav {
+  
+}
