rounded corners and a png i couldnt

--- a/website code/mcdegreestylesheet.css
+++ b/website code/mcdegreestylesheet.css
@@ -139,7 +139,6 @@ div > div {
     border: 2px solid #ff7575;
   }
 
-  /* Add a black background color to the top navigation bar */
-.topnav {
-  
-}
+  body {
+    background-color: #ffdbdb;
+  }
