--- a/templates/mcdegreeplanning.html
+++ b/templates/mcdegreeplanning.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>McGill Degree Planning</title>
-    <link rel="stylesheet" href="mcdegreestylesheet.css">
+    <link rel="stylesheet" href="static/styles/mcdegreestylesheet.css">
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="A tool to help current or prospective mcgill students plan their degree and classes">
     <meta name="keywords" content="mcgill, classes, mcgill classes, mcgill help, degree, classes, information, ">
